[B]Version 1.1.135[/B]
- sextb: fix stream source names
- watchmdh: Domain change
- hentaidude: Add genres for navigating
- erome: Add duration to videos listing
- base: Add stream headers handling for Kodi Piers
- aagmaal - domain change
- aagmaalpro - fix images, categories